syntax = "proto3";

option java_multiple_files = true;
option java_package = "billboard.service";
option java_outer_classname = "CampusProto";

package billboard;

service Campus {
  rpc Get (CampusGetRequest) returns (CampusReply) {}
  rpc Search (CampusSearchRequest) returns (CampusReply) {}
}

message CampusGetRequest {
  uint32 id = 1;
  string uuid = 2;
}

message CampusSearchRequest {
  map<string, string> filter = 1;
}

message CampusReply {
  string data = 1;
}
