syntax = "proto3";

// option java_multiple_files = true;
option java_package = "billboard.service";
option java_outer_classname = "RecommendProto";

package recommend;

service Recommend {
  rpc filter(FilterRequest) returns (Reply) {}
  rpc list(ListRequest) returns (Reply) {}
  rpc get(GetRequest) returns (Reply) {}
}

message FilterRequest {
  string filter = 1;
  map<string, string> param = 2;
}

message ListRequest {
  bool category1 = 1;
  bool category2 = 2;
  bool category3 = 3;
  bool category4 = 4;
  bool category5 = 5;
}

message GetRequest {
  uint32 id = 1;
  string uuid = 2;
}


message Reply { string data = 1; }
